add template html and show result

--- a/ui/html/header.html
+++ b/ui/html/header.html
@@ -4,6 +4,13 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Request UUID</title>
+		<style>
+			.outline {
+				border: 1px solid white;
+				padding: 0 5px;
+				background: cornsilk;
+				}
+		</style>
 	</head>
 	<body>
 {{end}}
